--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,10 @@
 {
-  "OperatorsNetworkPath": "NNOperators.json",
-  "OperandsNetworkPath":  "NNNumbers.json",
+  "OperatorsNetworkPath": "NewNNOperatorsDot.json",
+  "NumbersNetworkPath":   "NNNumbers.json",
   "CanvasImg":            "temp/temp_img.png",
+  "NumberLabels":         ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
+  "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", ""],
+  "WindowWidth":          "1200",
+  "WindowHeight":         "500",
+  "WindowResizable":      "False"
 }
