--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,17 @@
 {
-  "OperatorsNetworkPath": "NewNNOperatorsDot.json",
+  "OperatorsNetworkPath": "NNOperators.json",
   "NumbersNetworkPath":   "NNNumbers.json",
   "CanvasImg":            "temp/temp_img.png",
   "NumberLabels":         ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
   "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", ""],
   "WindowWidth":          "1200",
   "WindowHeight":         "500",
-  "WindowResizable":      "False"
+  "WindowResizable":      "False",
+  "Theme":                "Dark",
+  "PrimaryPalette":       "Yellow",
+
+  "THEMES":               ["Light", "Dark"],
+  "PRIMARY_PPALLETES":    ["Pink", "Blue", "Indigo", "BlueGrey", "Brown", "LightBlue",
+                           "Purple", "Gray", "Yellow", "LightGreen", "DeepOrange",
+                           "Green", "Red", "Teal", "Orange", "Cyan", "Amber", "DeepPurple", "Lime"]
 }
