Add AdjustAll to settings

--- a/settings.json
+++ b/settings.json
@@ -4,6 +4,7 @@
   "CanvasImg":            "temp/temp_img.png",
   "NumberLabels":         ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
   "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", ""],
+  "AdjustAll":            0,
   "WindowWidth":          "1200",
   "WindowHeight":         "500",
   "WindowResizable":      "False",
