--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
   "NumberLabels":         ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
   "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", ""],
   "AdjustAll":            0,
+  "RecursiveFinder":      0,
   "WindowWidth":          "1200",
   "WindowHeight":         "500",
   "WindowResizable":      "False",
