--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
   "LettersNetworkPath":   "NNLetters2.json",
   "CanvasImg":            "temp/temp_img.png",
   "NumberLabels":         ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ""],
-  "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", "\u03c0", "%", "S", "|", ""],
+  "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", "\u03c0", "%", "\u221a", "|", ""],
   "LettersLabels":        ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p",
                            "q", "r", "s", "t", "u","v", "w", "x", "y", "z", ""],
   "AdjustAll":            0,
