--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-  "OperatorsNetworkPath": "NNOperators6.json",
-  "NumbersNetworkPath":   "NNNumbers2.json",
-  "LettersNetworkPath":   "NNLetters2.json",
+  "OperatorsNetworkPath": "NNOperators.json",
+  "NumbersNetworkPath":   "NNNumbers.json",
+  "LettersNetworkPath":   "NNLetters.json",
   "CanvasImg":            "temp/temp_img.png",
   "NumberLabels":         ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ""],
   "OperatorLabels":       ["+", "-", "/", "*", "^", "(", ")", "<", ">", "=", "!", ".", "\u03c0", "%", "\u221a", "|", ""],
